# acroman

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.bak  README.md  TAGS  amt-db-funcs.c  amt-db-funcs.h  build.sh  cli-args.c  main.c  main.h
.github/workflows/: ccpp.yml
src/: amt-db-funcs.c  amt-db-funcs.h  cli-args.h  main.c  main.h  types.h
